chore: processor tests
Signed-off-by: Joke de Buhr <joke@xckk.de>